[gd_scene load_steps=7 format=3 uid="uid://dfy4agorh33pb"]

[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="1_52gxq"]
[ext_resource type="Script" path="res://ui/widgets/equip_hint.gd" id="1_hctvu"]
[ext_resource type="LabelSettings" uid="uid://7ghd6d3mcrnc" path="res://ui/themes/label_settings/info_label_bold_settings.tres" id="2_wmkxq"]
[ext_resource type="FontVariation" uid="uid://dnsrwubcv2dna" path="res://fonts/jozsika_normal.tres" id="3_bgoem"]
[ext_resource type="FontVariation" uid="uid://c0eb2s2aqcmcl" path="res://fonts/jozsika_italics.tres" id="4_adoba"]
[ext_resource type="FontVariation" uid="uid://bu8b2ja0f4a16" path="res://fonts/jozsika_bold.tres" id="5_ceifq"]

[node name="EquipHint" type="MarginContainer"]
size_flags_horizontal = 3
script = ExtResource("1_hctvu")

[node name="HintContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="HintContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
label_settings = ExtResource("2_wmkxq")
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="HintContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_bgoem")
theme_override_fonts/italics_font = ExtResource("4_adoba")
theme_override_fonts/bold_font = ExtResource("5_ceifq")
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "[b]Your base[/b] attack [i]increase[/i] by 150%. And shields breaks like doesn't exist."
fit_content = true
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 30

[node name="EmptySlot" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "- EMPTY SLOT -"
label_settings = ExtResource("1_52gxq")
horizontal_alignment = 1
vertical_alignment = 1
